2006-11-03  Loïc Minier <lool@dooz.org>

	* src/config.c: Fix a double free() which causes a crash on
	first start, when theme_dir isn't set. Fixes #114425.

2006-09-02  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Release gtetrinet 0.7.10.

2006-09-02  Jordi Mallach  <jordi@sindominio.net>

	* src/tetrinet.c: Check that pnum < 0, not <= for IN_LVL,
	probably an oversight in the security patch.

	* doc/gtetrinet.6: Patch from Nelson A. de Oliveira to correct
	some minor bugs in the manpage (Debian Bug#325662).

	* NEWS: Updated for 0.7.10.

2006-08-17  Jordi Mallach  <jordi@sindominio.net>

	* src/tetrinet.c: [CVE-2006-3125] Add index underflow protections
	where needed. Patch from Martin Schulze from the Debian Security
	Team. Thanks to Michael Gehring for analysis and proof of concept
	code.

2006-05-25  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Switch to IT_PROG_INTLTOOL([0.35.0) and move
	ALL_LINGUAS to po/LINGUAS.
	* po/LINGUAS: Added.

2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Remove obsolete entry for no_NO
	* po/no.po: And the translation.

2005-08-18  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2005-07-23  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-05-16  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Require gtk+-2.0 >= 2.6.0.
	* src/commands.c (about_command): Rename "translator_credits" to
	"translator-credits".

2005-04-29  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Release gtetrinet 0.7.9.

2005-04-29  Jordi Mallach  <jordi@sindominio.net>

	* src/client.c: Patch from Julien Plissonneau Duquène to
	fix network latency.

	* NEWS: Update for 0.7.9.

2005-04-15  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c: Applied patch from Julien Plissonneau Duquène which
	fixes a segfault in the channel list.
	
	* NEWS: Update for 0.7.9.

2005-04-12  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.7.9.
